# SimpleProtobuf

./: CMakeLists.txt  README.md
proto/: QueueMessage.proto
src/: Consumer.cpp  Consumer.h  ConsumerManager.cpp  ConsumerManager.h  Producer.cpp  Producer.h  ProducerManager.cpp  ProducerManager.h  QueueMessage.pb.cc  QueueMessage.pb.h  ThreadSafeQueue.cpp  ThreadSafeQueue.h  main.cpp
